--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,8 @@
 /* Filebin Style */
+.dropzone {
+  border-style: dashed;
+  border-color: rgb(81, 166, 245);
+  border-width: 2px;
+  border-radius: 6px;
+  background-color: rgba(245, 245, 245, 0.692);
+}
