--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,12 @@
 /* Filebin Style */
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .dropzone {
   border-style: dashed;
   border-color: rgb(81, 166, 245);
